--- a/spec/vcr_cassettes/PreparesCartForStripe/successful_credit_card_payment/with_a_shipping_method/handles_shipping.yml
+++ b/spec/vcr_cassettes/PreparesCartForStripe/successful_credit_card_payment/with_a_shipping_method/handles_shipping.yml
@@ -12,7 +12,7 @@ http_interactions:
       Accept:
       - "*/*"
       Date:
-      - Thu, 19 Apr 2018 21:14:15 GMT
+      - Mon, 23 Apr 2018 21:09:38 GMT
   response:
     status:
       code: 200
@@ -35,7 +35,7 @@ http_interactions:
       Access-Control-Allow-Headers:
       - Content-Type, X-Requested-With
       Date:
-      - Thu, 19 Apr 2018 21:13:57 GMT
+      - Mon, 23 Apr 2018 21:09:32 GMT
       Content-Length:
       - '67515'
     body:
@@ -905,7 +905,7 @@ http_interactions:
         \     <http:address location=\"https://api.taxcloud.net/1.0/taxcloud.asmx\"
         />\r\n    </wsdl:port>\r\n  </wsdl:service>\r\n</wsdl:definitions>"
     http_version: 
-  recorded_at: Thu, 19 Apr 2018 21:14:16 GMT
+  recorded_at: Mon, 23 Apr 2018 21:09:39 GMT
 - request:
     method: post
     uri: https://api.taxcloud.net/1.0/taxcloud.asmx
@@ -913,7 +913,7 @@ http_interactions:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="UTF-8"?><env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:tns="http://taxcloud.net"
-        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Body><tns:Lookup><tns:customerID>4</tns:customerID><tns:cartID>cart_4</tns:cartID><tns:cartItems><tns:CartItem><tns:Index>0</tns:Index><tns:ItemID>Ticket</tns:ItemID><tns:TIC>91083</tns:TIC><tns:Price>30.0</tns:Price><tns:Qty>1</tns:Qty></tns:CartItem><tns:CartItem><tns:Index>1</tns:Index><tns:ItemID>Processing</tns:ItemID><tns:TIC>10010</tns:TIC><tns:Price>1.0</tns:Price><tns:Qty>1</tns:Qty></tns:CartItem><tns:CartItem><tns:Index>2</tns:Index><tns:ItemID>Shipping</tns:ItemID><tns:TIC>11000</tns:TIC><tns:Price>2.0</tns:Price><tns:Qty>1</tns:Qty></tns:CartItem></tns:cartItems><tns:origin><tns:Address1>1060
+        xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"><env:Body><tns:Lookup><tns:customerID>3</tns:customerID><tns:cartID>cart_3</tns:cartID><tns:cartItems><tns:CartItem><tns:Index>0</tns:Index><tns:ItemID>Ticket</tns:ItemID><tns:TIC>91083</tns:TIC><tns:Price>30.0</tns:Price><tns:Qty>1</tns:Qty></tns:CartItem><tns:CartItem><tns:Index>1</tns:Index><tns:ItemID>Processing</tns:ItemID><tns:TIC>10010</tns:TIC><tns:Price>1.0</tns:Price><tns:Qty>1</tns:Qty></tns:CartItem><tns:CartItem><tns:Index>2</tns:Index><tns:ItemID>Shipping</tns:ItemID><tns:TIC>11000</tns:TIC><tns:Price>2.0</tns:Price><tns:Qty>1</tns:Qty></tns:CartItem></tns:cartItems><tns:origin><tns:Address1>1060
         W. Addison</tns:Address1><tns:Address2 xsi:nil="true"/><tns:City>Chicago</tns:City><tns:State>IL</tns:State><tns:Zip5>60613</tns:Zip5><tns:Zip4
         xsi:nil="true"/></tns:origin><tns:destination><tns:Address1>1060 W. Addison</tns:Address1><tns:Address2></tns:Address2><tns:City>Chicago</tns:City><tns:State>IL</tns:State><tns:Zip5>60613</tns:Zip5><tns:Zip4
         xsi:nil="true"/></tns:destination><tns:apiLoginID>2C239750</tns:apiLoginID><tns:apiKey>fe601bd7-752c-441e-9976-ac5a79778899</tns:apiKey></tns:Lookup></env:Body></env:Envelope>
@@ -923,7 +923,7 @@ http_interactions:
       Accept:
       - "*/*"
       Date:
-      - Thu, 19 Apr 2018 21:14:16 GMT
+      - Mon, 23 Apr 2018 21:09:39 GMT
       Soapaction:
       - '"http://taxcloud.net/Lookup"'
       Content-Type:
@@ -952,7 +952,7 @@ http_interactions:
       Access-Control-Allow-Headers:
       - Content-Type, X-Requested-With
       Date:
-      - Thu, 19 Apr 2018 21:13:59 GMT
+      - Mon, 23 Apr 2018 21:09:34 GMT
       Content-Length:
       - '724'
     body:
@@ -960,9 +960,9 @@ http_interactions:
       string: <?xml version="1.0" encoding="utf-8"?><soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"><soap:Body><LookupResponse
         xmlns="http://taxcloud.net"><LookupResult><ResponseType>OK</ResponseType><Messages
-        /><CartID>cart_4</CartID><CartItemsResponse><CartItemResponse><CartItemIndex>0</CartItemIndex><TaxAmount>0</TaxAmount></CartItemResponse><CartItemResponse><CartItemIndex>1</CartItemIndex><TaxAmount>0.1</TaxAmount></CartItemResponse><CartItemResponse><CartItemIndex>2</CartItemIndex><TaxAmount>0.2</TaxAmount></CartItemResponse></CartItemsResponse></LookupResult></LookupResponse></soap:Body></soap:Envelope>
+        /><CartID>cart_3</CartID><CartItemsResponse><CartItemResponse><CartItemIndex>0</CartItemIndex><TaxAmount>0</TaxAmount></CartItemResponse><CartItemResponse><CartItemIndex>1</CartItemIndex><TaxAmount>0.1</TaxAmount></CartItemResponse><CartItemResponse><CartItemIndex>2</CartItemIndex><TaxAmount>0.2</TaxAmount></CartItemResponse></CartItemsResponse></LookupResult></LookupResponse></soap:Body></soap:Envelope>
     http_version: 
-  recorded_at: Thu, 19 Apr 2018 21:14:17 GMT
+  recorded_at: Mon, 23 Apr 2018 21:09:40 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/tokens
@@ -992,11 +992,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 19 Apr 2018 21:14:18 GMT
+      - Mon, 23 Apr 2018 21:09:41 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '781'
+      - '783'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -1012,7 +1012,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_4hIotKUvLvRHrV
+      - req_05BJ88MQX61Ans
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -1021,10 +1021,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1CIk58G9Bw4keQMbxuZ5bUeH",
+          "id": "tok_1CKBurG9Bw4keQMbK1Ef5duc",
           "object": "token",
           "card": {
-            "id": "card_1CIk58G9Bw4keQMb2UVEcVvV",
+            "id": "card_1CKBurG9Bw4keQMbv7SOO98c",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -1047,12 +1047,12 @@ http_interactions:
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "176.119.73.85",
-          "created": 1524172458,
+          "client_ip": "176.119.122.236",
+          "created": 1524517781,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Thu, 19 Apr 2018 21:14:18 GMT
+  recorded_at: Mon, 23 Apr 2018 21:09:41 GMT
 recorded_with: VCR 4.0.0
