--- a/spec/vcr_cassettes/StripeCharge/success/without_an_affiliate_fee/calls_stripe_to_get_a_charge.yml
+++ b/spec/vcr_cassettes/StripeCharge/success/without_an_affiliate_fee/calls_stripe_to_get_a_charge.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/tokens
     body:
       encoding: UTF-8
-      string: card[number]=4000000000000002&card[exp_month]=12&card[exp_year]=2019&card[cvc]=123
+      string: card[number]=4242424242424242&card[exp_month]=12&card[exp_year]=2019&card[cvc]=123
     headers:
       User-Agent:
       - Stripe/v1 RubyBindings/3.12.0
@@ -29,11 +29,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 24 Apr 2018 11:41:40 GMT
+      - Mon, 23 Apr 2018 12:08:33 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '782'
+      - '783'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_dEIM2z62e5rrek
+      - req_FmU399YEC4zws0
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,10 +58,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1CKPWiG9Bw4keQMbFcLtWgwV",
+          "id": "tok_1CK3TBG9Bw4keQMbhAQlvMdu",
           "object": "token",
           "card": {
-            "id": "card_1CKPWiG9Bw4keQMb8zz0cGS9",
+            "id": "card_1CK3TAG9Bw4keQMbfHg77LQM",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -77,27 +77,27 @@ http_interactions:
             "dynamic_last4": null,
             "exp_month": 12,
             "exp_year": 2019,
-            "fingerprint": "i9Dv4BVMQje5WVos",
+            "fingerprint": "GX3g3BXI6WxEKoWQ",
             "funding": "credit",
-            "last4": "0002",
+            "last4": "4242",
             "metadata": {},
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "212.178.24.235",
-          "created": 1524570100,
+          "client_ip": "176.119.122.236",
+          "created": 1524485313,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Tue, 24 Apr 2018 11:41:40 GMT
+  recorded_at: Mon, 23 Apr 2018 12:08:33 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/charges
     body:
       encoding: UTF-8
-      string: amount=2500&currency=usd&source=tok_1CKPWiG9Bw4keQMbFcLtWgwV&description=&metadata[reference]=fb9faacdec73c79fc9ad
+      string: amount=3000&currency=usd&source=tok_1CK3TBG9Bw4keQMbhAQlvMdu&description=&metadata[reference]=4ea605d1a53fce9e1a12
     headers:
       User-Agent:
       - Stripe/v1 RubyBindings/3.12.0
@@ -110,24 +110,24 @@ http_interactions:
         MacBook-Pro-Alexander.local 17.5.0 Darwin Kernel Version 17.5.0: Mon Mar  5
         22:24:32 PST 2018; root:xnu-4570.51.1~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Idempotency-Key:
-      - fb9faacdec73c79fc9ad
+      - 4ea605d1a53fce9e1a12
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
   response:
     status:
-      code: 402
-      message: Payment Required
+      code: 200
+      message: OK
     headers:
       Server:
       - nginx
       Date:
-      - Tue, 24 Apr 2018 11:41:42 GMT
+      - Mon, 23 Apr 2018 12:08:34 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '269'
+      - '1782'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -143,26 +143,93 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Idempotency-Key:
-      - fb9faacdec73c79fc9ad
+      - 4ea605d1a53fce9e1a12
       Original-Request:
-      - req_w6iGVX3zPRioWE
+      - req_FGu6s2ISGVUZEG
       Request-Id:
-      - req_w6iGVX3zPRioWE
+      - req_FGu6s2ISGVUZEG
       Stripe-Version:
       - '2018-02-06'
+      Strict-Transport-Security:
+      - max-age=31556926; includeSubDomains; preload
     body:
       encoding: UTF-8
       string: |
         {
-          "error": {
-            "charge": "ch_1CKPWkG9Bw4keQMbQCY7ZYjL",
-            "code": "card_declined",
-            "decline_code": "generic_decline",
-            "doc_url": "https://stripe.com/docs/error-codes/card-declined",
-            "message": "Your card was declined.",
-            "type": "card_error"
-          }
+          "id": "ch_1CK3TCG9Bw4keQMbDs0ZUiBd",
+          "object": "charge",
+          "amount": 3000,
+          "amount_refunded": 0,
+          "application": null,
+          "application_fee": null,
+          "balance_transaction": "txn_1CK3TCG9Bw4keQMbaW7BUwvr",
+          "captured": true,
+          "created": 1524485314,
+          "currency": "usd",
+          "customer": null,
+          "description": "",
+          "destination": null,
+          "dispute": null,
+          "failure_code": null,
+          "failure_message": null,
+          "fraud_details": {},
+          "invoice": null,
+          "livemode": false,
+          "metadata": {
+            "reference": "4ea605d1a53fce9e1a12"
+          },
+          "on_behalf_of": null,
+          "order": null,
+          "outcome": {
+            "network_status": "approved_by_network",
+            "reason": null,
+            "risk_level": "normal",
+            "seller_message": "Payment complete.",
+            "type": "authorized"
+          },
+          "paid": true,
+          "receipt_email": null,
+          "receipt_number": null,
+          "refunded": false,
+          "refunds": {
+            "object": "list",
+            "data": [],
+            "has_more": false,
+            "total_count": 0,
+            "url": "/v1/charges/ch_1CK3TCG9Bw4keQMbDs0ZUiBd/refunds"
+          },
+          "review": null,
+          "shipping": null,
+          "source": {
+            "id": "card_1CK3TAG9Bw4keQMbfHg77LQM",
+            "object": "card",
+            "address_city": null,
+            "address_country": null,
+            "address_line1": null,
+            "address_line1_check": null,
+            "address_line2": null,
+            "address_state": null,
+            "address_zip": null,
+            "address_zip_check": null,
+            "brand": "Visa",
+            "country": "US",
+            "customer": null,
+            "cvc_check": "pass",
+            "dynamic_last4": null,
+            "exp_month": 12,
+            "exp_year": 2019,
+            "fingerprint": "GX3g3BXI6WxEKoWQ",
+            "funding": "credit",
+            "last4": "4242",
+            "metadata": {},
+            "name": null,
+            "tokenization_method": null
+          },
+          "source_transfer": null,
+          "statement_descriptor": null,
+          "status": "succeeded",
+          "transfer_group": null
         }
     http_version: 
-  recorded_at: Tue, 24 Apr 2018 11:41:42 GMT
+  recorded_at: Mon, 23 Apr 2018 12:08:35 GMT
 recorded_with: VCR 4.0.0
